# zsnapper

./: CMakeLists.txt  ExecGetOutput.cpp  ExecGetOutput.h  Fork.cpp  Fork.h  SimpleExec.cpp  SimpleExec.h  SystemExec.cpp  SystemExec.h  ZfsDataset.cpp  ZfsDataset.h  ZfsSnapshot.cpp  ZfsSnapshot.h  ZsnapperConfig.cpp  ZsnapperConfig.h  ZsnapperLoop.cpp  ZsnapperLoop.h  ZsnapperState.cpp  ZsnapperState.h  license.txt  main.cpp
